tests/macros/raw_select/validate_async.stderr
error: option `validate_async` does not exist for kind `raw_select`
 --> $DIR/validate_async.rs:2:55
  |
2 |     let q = inquisition::questions![RawSelect { async validate: todo!() }];
  |                                                       ^^^^^^^^
