tests/macros/raw_select/validate_async.rs
fn main() {
    let q = inquisition::questions![RawSelect { async validate: todo!() }];
}
